--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,46 @@
 :root {
-  font-size: 62.5rem;
-  font-size: "";
+  font-size: 62.5%;
+  font-family: Georgia, 'Times New Roman', Times, serif ;
+}
+
+main h1, h2 {
+ text-align: center;
+ margin: 1rem 0;
+}
+
+main h1 {
+  font-size: 3rem;
+}
+
+main h2 {
+  font-size: 2.5rem;
+}
+
+main p {
+  text-align: center;
+  font-weight: 900;
+  font-size: 2rem;
+  color: rgb(255, 55, 0);
+  margin-top: 4rem;
+}
+
+main form {
+  width: 30rem;
+  margin: 5rem auto;
+}
+
+main form label {
+  margin-bottom: .5rem;
+}
+
+main form input, main form select {
+  margin-bottom: 2rem;
+  width: 100%;
+  height: 3rem;
+  padding-left: 1rem;
+}
+
+main form button {
+  width: 100%;
+  height: 4rem;
 }
